<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cocktail Recommender</string>
    <string name="title_activity_menu">Menü</string>
    <string name="title_activity_search">Rezeptsuche</string>
    <string name="title_activity_recipe_book">Rezeptbuch</string>
    <string name="title_activity_shopping_list">Einkaufslisten</string>
    <string name="generic_positive">OK</string>
    <string name="generic_cancel">Abbrechen</string>
    <string name="generic_search_hint">Hier Suchbegriff eingeben...</string>

    <!-- About dialog strings -->
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">Icons mit freundlicher Genehmigung von icons8.com</string>

    <!-- Related to MenuActivity -->
    <string name="main_menu_title_text">Cocktail Recommender</string>
    <string name="main_menu_search_button_text">Rezeptsuche</string>
    <string name="main_menu_recipe_book_button_text">Rezeptbuch</string>
    <string name="main_menu_shopping_list_button_text">Einkaufsliste</string>
    <string name="main_menu_fav_list_button_text">Favoriten</string>
    <string name="main_menu_history_button_text">Rezepthistory</string>

    <!-- Related to RecipeBookActivity -->
    <string name="search_result_tab_name">Suchergebnisse</string>
    <string name="history_tab_name">History</string>
    <string name="favs_tab_name">Favoriten</string>
    <string name="all_recipes_tab_name">Alle Rezepte</string>

    <!-- Related to SearchActivity -->
    <string name="category_button_alc">Alkoholisch</string>
    <string name="category_button_nonalc">Nicht-alkoholisch</string>
    <string name="category_button_misc">Verschieden</string>
    <string name="category_button_selected">Ausgewählt</string>
    <string name="category_button_tags">Tags</string>
    <string name="start_search">GO!</string>
    <string name="recipe_page_test">Wählen Sie ein Rezept aus!</string>
    <string name="tag_icon_content_description">Tag Icon</string>
    <string name="start_search_button_description">Suche starten Button</string>
    <string name="search_settings_button_description">Sucheinstellungen Button</string>

    <!-- Related to dialogs in SearchActivity -->
    <string name="search_settings_dialog_title">Sucheinstellungen</string>
    <string name="search_settings_option_one_title">Wie viele der ausgewählten Zutaten sollen enthalten sein?</string>
    <string name="search_settings_option_two_title">Sollen auch Ergebnisse mit nicht ausgewählten Zutaten gelistet werden?</string>
    <string name="search_settings_option_three_title">Wie viele der ausgewählten Tags sollen zutreffen?</string>
    <string name="search_settings_option_four_title">Sollen auch Ergebnisse mit nicht ausgewählten Tags gelistet werden?</string>
    <string name="search_settings_option_one_choice_any">Beliebig*</string>
    <string name="search_settings_option_one_choice_all">Alle</string>
    <string name="search_settings_option_two_choice_yes">Ja</string>
    <string name="search_settings_option_two_choice_no">Nein</string>
    <string name="search_settings_option_three_choice_any">Beliebig*</string>
    <string name="search_settings_option_three_choice_all">Alle</string>
    <string name="search_settings_option_four_choice_yes">Ja</string>
    <string name="search_settings_option_four_choice_no">Nein</string>
    <string name="search_settings_please_note">* Hinweis: Es muss mindestens eine ausgewählte Zutat enthalten sein bzw ein ausgewähltes Tag zutreffen.</string>
    <string name="search_progress_text">Suche im Gang</string>
    <string name="search_error_no_selection_title">Achtung</string>
    <string name="search_error_no_selection_msg">Es wurden weder Zutaten noch Tags ausgewählt. Die Suche wurde nicht gestartet.</string>
    <string name="search_error_no_results_title">Suche Erfolglos</string>
    <string name="search_error_no_results_msg">Es konnten keine Rezepte gefunden werden.</string>
    <string name="search_error_option_back">Zurück zur Suche</string>
    <string name="search_error_option_recipebook">Zum vollständigen Rezeptbuch</string>
    <string name="toast_ing_select">Zutat ausgewählt</string>
    <string name="toast_ing_remove">Zutat entfernt</string>
    <string name="toast_tag_select">Tag ausgewählt</string>
    <string name="toast_tag_remove">Tag entfernt</string>

    <!-- Related to ShoppingListActivity -->
    <string name="shopping_list_ing_entry_delete_button_description">Zutat löschen</string>

    <!-- Related to ShoppingList dialogs -->
    <string name="shopping_list_creation_dialog_title">Zutaten zu Einkaufsliste hinzufügen</string>
    <string name="shopping_list_creation_dialog_option_one">Neue Einkaufsliste erstellen</string>
    <string name="shopping_list_creation_dialog_option_two">Vorhandene Einkaufsliste verwenden</string>
    <string name="shopping_list_creation_dialog_name_entry">Geben Sie der Einkaufsliste einen Namen.</string>
    <string name="shopping_list_creation_dialog_entry_hint">Hier Namen eingeben</string>
    <string name="shopping_list_creation_dialog_selection_list">Wählen Sie eine Einkaufsliste aus.</string>
    <string name="ingredients_to_buy">Folgende Zutaten sind Einzukaufen:</string>
    <string name="shopping_list_creation_dialog_no_lists">Es existiert noch keine Einkaufsliste.</string>
    <string name="shopping_list_delete">Folgende Einkaufsliste löschen?:</string>
    <string name="shopping_list_creation_dialog_name_entry_error">Bitte einen Namen eingeben.</string>
    <string name="shopping_list_creation_no_ing_selected">Bitte mindestens eine Zutat auswählen.</string>
    <string name="shopping_list_ing_entry_deletion_title">entfernen?</string>
    <string name="shopping_list_ing_entry_last_item_deletion_message">Die Einkaufsliste wird nach Entfernung der ausgewählten Zutat gelöscht!</string>
    <string name="add_to_shopping_list_button_description">Button zur Einkaufslistenerstellung</string>
<<<<<<< HEAD

=======
    <string name="shopping_list_added_to_existing">Zutaten zu Einkaufsliste hinzugefügt</string>
    <string name="shopping_list_created">Einkaufsliste erstellt</string>
    
>>>>>>> 95dc81c99aa4e5e8979bc22c9dabc9e7e7b8989f
    <!-- Related to Favorites -->
    <string name="favorite_list_deletion_dialog_title">aus Favoriten entfernen?</string>
    <string name="toast_favorite">Zu Favoriten hinzugefügt</string>
    <string name="toast_unfavorite">Von Favoriten entfernt</string>
    <string name="add_to_favorite_button_description">Button zum Favorisieren</string>

</resources>