<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/search_settings_title"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/search_settings_option_one_title" />

    <Switch
        android:id="@+id/search_settings_option_one_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textOff="@string/search_settings_option_one_choice_any"
        android:textOn="@string/search_settings_option_one_choice_all" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/search_settings_option_two_title" />

    <Switch
        android:id="@+id/search_settings_option_two_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textOff="@string/search_settings_option_two_choice_yes"
        android:textOn="@string/search_settings_option_two_choice_no" />

</LinearLayout>