<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:weightSum="1" >

            <SearchView
                android:id="@+id/ingredient_selection_filter_bar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.01"
                android:background="@color/background_black" />

            <ListView
                android:id="@+id/ingredient_selection_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85"
                android:padding="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:weightSum="1" >

            <Button
                android:id="@+id/category_button_alcoholic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/background_not_selected_blue"
                android:text="@string/category_button_alc" />

            <Button
                android:id="@+id/category_button_non_alcoholic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/background_not_selected_blue"
                android:text="@string/category_button_nonalc" />

            <Button
                android:id="@+id/category_button_misc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/background_not_selected_blue"
                android:text="@string/category_button_misc" />

            <Button
                android:id="@+id/category_button_selected"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/background_not_selected_blue"
                android:text="@string/category_button_selected" />
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:background="@color/background_black" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.39"
        android:weightSum="1" >

        <GridView
            android:id="@+id/tag_selection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:numColumns="@integer/tag_list_column_num" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/start_search_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:src="@drawable/ic_action_search" />

            <ImageButton
                android:id="@+id/search_settings_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:src="@drawable/ic_action_settings" />
        </LinearLayout>
    </TableRow>

</LinearLayout>